# Chattterbox-TTS

./: .gitignore  README.md  aligner.py  audio_utils.py  chunking.py  disable_perth.py  main.py  normalize.py  pyproject.toml  tts_client.py
src/tests/: test_audio_utils.py  test_normalize.py
